# opencv_samples

./: CMakeLists.txt  README.md
src/: cascade_inference.cpp
